--- a/Bejerholm Stenhuggeri/src/view/MainFrame.form
+++ b/Bejerholm Stenhuggeri/src/view/MainFrame.form
@@ -17,6 +17,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Bejerholm Stenhuggeri"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ec" red="c8" type="rgb"/>
     </Property>
